# neko3cs-lab

./: App.xaml  App.xaml.cs  BatchService.cs  MainWindow.xaml.cs  Person.cs  Program.cs  QueryNotification.cs  README.md  SampleMailer.sln  SampleQueryNotification.csproj  SubWindow.xaml  SystemWindowsInteractivitySample.csproj  SystemWindowsInteractivitySample.sln  TryDotNetFive.csproj  TryDotNetFive.sln  angular.json  package-lock.json  package.json
PlayMicroBatchFramework/: MyFirstBatch.cs  PlayMicroBatchFramework.csproj  Program.cs  Sort.cs
PracticeReactNativeWindows/: package-lock.json  package.json
Properties/: AssemblyInfo.cs  launchSettings.json
SampleEntityFrameworkCore/: codeFirstDb.db3
SampleMauiApp/: README.md  SampleMauiApp.sln
SampleReactNativeWithQiita/: App.js  app.json  package.json
ViewModels/: ModalWindowViewModel.cs
angular-app/: angular.json
apollo-graphql/: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
aspnet-core-blazor/: README.md
aspnet-core-mvc/: .gitignore
aspnet-mvc/: README.md
aspnet_core_blazor_in_mvc/: AspNetCoreBlazorInMvc.slnx  README.md
aspnet_core_mvc_htmx/: .gitignore  AGENTS.md  AspNetCoreMvcHtmx.slnx  README.md
awscdk-basic-serverless-webapi/: AGENTS.md  README.md
azure-dab-iac/: .gitignore  README.md
azure-functions-with-ef-net48/: README.md
azure-serverless-web-api/: AGENTS.md  README.md
azure-virtual-machine-iac/: README.md
blog_app/: package.json
chromedp/: README.md
cpp_11_to_23_travel/: .gitignore  README.md  xmake.lua
csx-web-api/: CsxWebAPI.sln
deno-oak/: README.md  deno.json
deploy-data-api-builder-to-azure/: .gitignore  Deploy.ps1  README.md  dab-config.json
deploy-virtual-machine-to-azure/: .gitignore  README.md  (+3 more)
hello-rust-api/: Cargo.toml  README.md
hello-rust-api/src/: lib.rs  main.rs
hello-rust-api/tests/: api_test.rs
practice/qt-quick-sample-app/: CMakeLists.txt  build.sh
practice/qt-quick-sample-app/src/: main.cpp  mainwindow.qml
sample/open_gl_cpp/: .gitignore  CMakeLists.txt  README.md
(+1321 files in other folders)
