[package]
name = "hello-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.2"
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1.0"
mime = "0.3"
